# EvoCore

./: main.py  pyproject.toml  try.ipynb  try.py
evocore/model/: model_manager.py
evocore/model/models/: dummy.py  gemma.py  gemma12b.py  gemma27b.py  gpt.py  llama.py  llama_instruct.py  qwen.py  qwen_code.py
evocore/seed/: prompts.py  test.py  try.ipynb
evocore/seed/v1/: main.py
evocore/seed/v1/res/v1/: gpt_qwencode.py
test/model/: test_model_manager.py
